--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "vite-plugin-ejs": "^1.6.4"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.1",
     "gh-pages": "^5.0.0",
     "glob": "^10.2.2",
     "sass": "^1.61.0",
     "sass-loader": "^13.2.2",
+    "swiper": "^10.2.0",
     "vite-plugin-live-reload": "^3.0.2"
   }
 }
